# tinap

./: .gitignore  Cargo.toml  README.md
.github/workflows/: general.yml
client/: Cargo.toml
client/src/: authenticate.rs  error.rs  lib.rs  main.rs  registration.rs
server/: Cargo.toml
server/src/: authenticate.rs  error.rs  lib.rs  main.rs  registration.rs
src/: lib.rs  main.rs
src/client/: authenticate.rs  client.rs  main.rs  mod.rs  registration.rs
src/server/: autheticate.rs  main.rs  mod.rs  registration.rs  server.rs
