[package]
name = "tinap"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "tinap-test"

[[bin]]
path = "src/server/main.rs"
name = "tinap-server"

[[bin]]
path = "src/client/main.rs"
name = "tinap-client"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"
axum = "0.7.5"
fastwebsockets = { version = "0.8.0", features = ["upgrade", "with_axum"] }
generic-array = "0.14"
http-body-util = "0.1.2"
hyper = { version = "1.4.0", features = ["full"] }
hyper-util = { version = "0.1.6", features = ["full"] }
opaque-ke = "2.0.0"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
bincode = "1.3.3"
once_cell = "1.19.0"


